--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
     <title>Francisco Cezar</title>
 </head>
 <body>
+
+    <i class="bi bi-list menu-mobile"></i>
+
     <aside id="header">
         <section class="profile">
             <img src="../static/img/IMG_0074.JPG" alt="Foto do Francisco">
