--- a/static/style.css
+++ b/static/style.css
@@ -102,11 +102,12 @@ section#inicio {
 }
 
 section#inicio h2 {
-    font-size: 5rem;
+    font-size: 4rem;
+
 }
 
 section#inicio span#subtitle {
-    margin-right: 8rem;
+    margin-right: 16rem;
     font-size: 1.5rem;
 }
 
@@ -168,7 +169,22 @@ i.menu-mobile {
     }
 }
 
+*::-webkit-scrollbar {
+    width: 7px;
+    height: 3px; /* A altura só é vista quando a rolagem é horizontal */
+}
+  
+*::-webkit-scrollbar-track {
+    background: transparent;
+    padding: 2px;
+}
+  
+*::-webkit-scrollbar-thumb {
+    background-color: #000;
+}
 
-
+.section-bg{
+    background-color: #eff5ff;
+}
 
 
