--- a/templates/index.html
+++ b/templates/index.html
@@ -45,13 +45,10 @@
                   <a class="nav-link" href="#habilidades"><i class="bi bi-list-check"></i> Habilidades</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-file-earmark-bar-graph-fill"></i>Currículo</a>
-                </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-collection-fill"></i>Portfólio</a>
+                  <a class="nav-link" href="#projetos"><i class="bi bi-collection-fill"></i>Projetos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-envelope-fill"></i>Contato</a>
+                    <a class="nav-link" href="#contato"><i class="bi bi-envelope-fill"></i>Contato</a>
                 </li>
               </ul>
         </nav>
@@ -90,10 +87,10 @@
                 </div>
                 <div class="col-md-8">
                     <h3>Programador Python</h3>
-                    <p>Estou em busca de me integrar ao mercado, por isso tenho estudado bastante por meio de cursos particulares e disponíveis na internet, livros, videoaulas e o bom e velho “vai lá e faz”, meus projetos pessoais. Além disso, tenho investido tempo em aprimorar meus conhecimentos em inglês e alemão. A primeira por ser essencial, a segunda por paixão. </p>
+                    <p>Estou em busca de me integrar ao mercado, por isso tenho estudado bastante por meio de cursos particulares e disponíveis na internet, livros, videoaulas e o bom e velho “vai lá e faz”, meus projetos pessoais. Além disso, tenho investido tempo em aprimorar meus conhecimentos em inglês e alemão. A primeira, por ser essencial, a segunda, por paixão. </p>
                     
                     <div class="row mt-3 mb-3">
-                        <div class="col-md-6">
+                        <div class="col">
                             <ul class="list-group list-group-flush fs-5">
                                 <li class="list-group-item">
                                     Niver: <span class="fw-lighter">28 de Novembro de 1995</span>
@@ -102,7 +99,7 @@
                                     Idade: <span class="fw-lighter">26</span>
                                 </li>
                                 <li class="list-group-item">
-                                    Cidade: <span class="fw-lighter">Campos do Jorão</span>
+                                    Cidade: <span class="fw-lighter">Campos do Jordão</span>
                                 </li>
                                 <li class="list-group-item">
                                     Estado: <span class="fw-lighter">São Paulo</span>
@@ -110,15 +107,7 @@
                                 
                             </ul>
                         </div>  
-                        <div class="col-md-6">
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">An item</li>
-                                <li class="list-group-item">A second item</li>
-                                <li class="list-group-item">A third item</li>
-                                <li class="list-group-item">A fourth item</li>
-                                
-                            </ul>
-                        </div>  
+                    
 
                     </div>  
                     
@@ -217,6 +206,63 @@
 
             </div>
 
+        </section>
+
+        <section id="projetos" class="mt-5">
+            <div class="container pb-5 pt-5">
+                <h2 class="pb-4">Projetos</h2>
+
+                <div id="carouselProjetos" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    
+                    <div class="carousel-inner">
+                      <div class="carousel-item active" data-bs-interval="10000">
+                        
+                        <div class="row row-cols-1 row-cols-md-3 g-4">
+                            <div class="col">
+                              <div class="card">
+                                <img src="../static/img/Captura de Tela 2022-09-22 às 20.18.34.png" class="card-img-top" alt="Gerador de Senhas">
+                                <div class="card-body">
+                                  <h5 class="card-title">Gerador de Senhas</h5>
+                                  <p class="card-text">Projeto em Python com interface gráfica unsando PySimpleGUI.</p>
+                                  <div class="d-flex justify-content-center">
+                                    <a href="" target="_blank" class="btn btn-outline-primary"><i class="bi bi-github"></i></a>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="col">
+                                <div class="card">
+                                  <img src="../static/img/Captura de Tela 2022-09-22 às 20.18.34.png" class="card-img-top" alt="Gerador de Senhas">
+                                  <div class="card-body">
+                                    <h5 class="card-title">Gerador de Senhas</h5>
+                                    <p class="card-text">Projeto em Python com interface gráfica unsando PySimpleGUI.</p>
+                                    <div class="d-flex justify-content-center">
+                                      <a href="" target="_blank" class="btn btn-outline-primary"><i class="bi bi-github"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col">
+                                <div class="card">
+                                  <img src="../static/img/Captura de Tela 2022-09-22 às 20.18.34.png" class="card-img-top" alt="Gerador de Senhas">
+                                  <div class="card-body">
+                                    <h5 class="card-title">Gerador de Senhas</h5>
+                                    <p class="card-text">Projeto em Python com interface gráfica unsando PySimpleGUI.</p>
+                                    <div class="d-flex justify-content-center">
+                                      <a href="" target="_blank" class="btn btn-outline-primary"><i class="bi bi-github"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+
+            </div>
         </section>
 
     </main>
