--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-md-8">
                     <h3>Programador Python</h3>
-                    <p>Estou em busca de me integrar ao mercado, por isso tenho estudado bastante por meio de cursos particulares e disponíveis na internet, livros, videoaulas e o bom e velho “vai lá e faz”, meus projetos pessoais. Além disso, tenho investido tempo em aprimorar meus conhecimentos em inglês e alemão. A primeira, por ser essencial, a segunda, por paixão. </p>
+                    <p>Estou em busca de me integrar ao mercado, por isso tenho estudado bastante por meio de cursos particulares e disponíveis na internet, livros, videoaulas e o bom e velho “vai lá e faz”, meus projetos pessoais. Além disso, tenho investido tempo em aprimorar meus conhecimentos em inglês e alemão. A primeira por ser essencial, a segunda por paixão. </p>
                     
                     <div class="row mt-3 mb-3">
                         <div class="col">
@@ -121,15 +121,7 @@
 
             <div class="container pb-5">
                 <h2 class="pt-5">Habilidades</h2>
-                <p>Eu estou preparado.
-                    Pronto para assumir as minhas funções da melhor forma possível.
-                    Eu estou focado apenas no essencial.
-                    Alheio a todo resto.
-                    Só vou tomar decisões pragmáticas.
-                    Não vou me permitir distrações levianas.
-                    Não vou me permitir pensar em coisas não importantes.
-                    Eu não vou depender de ninguém e nem de nada.
-                    Não vou estar sujeito a erros.</p>
+                <p>Continuo estudando e praticando todos os dias para aprimorar os meus conhecimentos e técnicas em programação. Ao mesmo tempo em que permaneço focado em meus objetivos e metas, mantenho-me atualizado sobre novas tecnologias no mercado. Até o momento, estas são as habilidades técnicas que adquiri com meus estudos, e também algumas habilidades pessoais, que considero fundamentais num ambiente de trabalho. As porcentagens estão de acordo com o conhecimento que acredito possuir.</p>
                 
                 <div class="row">
                     <div class="col-md-6">
@@ -219,41 +211,49 @@
                         
                         <div class="row row-cols-1 row-cols-md-3 g-4">
                             <div class="col">
-                              <div class="card">
-                                <img src="../static/img/Captura de Tela 2022-09-22 às 20.18.34.png" class="card-img-top" alt="Gerador de Senhas">
+                              <div class="card h-100">
+                                <img src="../static/img/Captura de Tela 2022-09-23 às 10.30.27.png" class="card-img-top img-fluid w-100" alt="Gerador de Senhas">
                                 <div class="card-body">
                                   <h5 class="card-title">Gerador de Senhas</h5>
-                                  <p class="card-text">Projeto em Python com interface gráfica unsando PySimpleGUI.</p>
+                                  <p class="card-text mt-3">Projeto em Python com interface gráfica unsando PySimpleGUI.</p>
                                   <div class="d-flex justify-content-center">
-                                    <a href="" target="_blank" class="btn btn-outline-primary"><i class="bi bi-github"></i></a>
+                                    <a href="" target="_blank" class="btn btn-outline-primary me-3 mt-4"><i class="bi bi-github"></i></a>
                                   </div>
                                 </div>
                               </div>
                             </div>
 
                             <div class="col">
-                                <div class="card">
-                                  <img src="../static/img/Captura de Tela 2022-09-22 às 20.18.34.png" class="card-img-top" alt="Gerador de Senhas">
+                                <div class="card h-100">
+                                  <img src="../static/img/Captura de Tela 2022-09-22 às 22.46.11.png" class="card-img-top img-fluid w-100" alt="Site com Flask">
                                   <div class="card-body">
-                                    <h5 class="card-title">Gerador de Senhas</h5>
-                                    <p class="card-text">Projeto em Python com interface gráfica unsando PySimpleGUI.</p>
+                                    <h5 class="card-title">Site com Flask</h5>
+                                    <p class="card-text mt-3">Protótipo de site para usuários com login e senha, usando Flaks, HTML, CSS, Bootstrap.</p>
                                     <div class="d-flex justify-content-center">
-                                      <a href="" target="_blank" class="btn btn-outline-primary"><i class="bi bi-github"></i></a>
+                                      <a href="https://github.com/franciscocezar/SiteComunidade.git" target="_blank" class="btn btn-outline-primary me-3"><i class="bi bi-github"></i></a>
                                     </div>
                                   </div>
                                 </div>
                               </div>
 
                               <div class="col">
-                                <div class="card">
-                                  <img src="../static/img/Captura de Tela 2022-09-22 às 20.18.34.png" class="card-img-top" alt="Gerador de Senhas">
-                                  <div class="card-body">
-                                    <h5 class="card-title">Gerador de Senhas</h5>
-                                    <p class="card-text">Projeto em Python com interface gráfica unsando PySimpleGUI.</p>
+                                <div class="card h-100">
+                                    <img src="../static/img/Captura de Tela 2022-09-23 às 10.30.27.png" class="card-img-top img-fluid w-100"
+                                    alt="print do blog">
+                                <div class="card-body">
+                                    <h5 class="card-title">Timer</h5>
+                                    <p class="card-text">Projeto front-end criado com HTML, CSS, Bootstrap e
+                                        JavaScript,
+                                        deploy realizado no Netlify</p>
                                     <div class="d-flex justify-content-center">
-                                      <a href="" target="_blank" class="btn btn-outline-primary"><i class="bi bi-github"></i></a>
+                                        <a href=""
+                                            target='_blank' class="btn btn-outline-dark me-3"><i
+                                                class="bi bi-github"></i></a>
+                                        <a href="" target='_blank'
+                                            class="btn btn-outline-primary"><i class="bi bi-link-45deg"></i></a>
                                     </div>
-                                  </div>
+
+                                </div>
                                 </div>
                             </div>
                         </div>
