--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,9 @@
 
     <aside id="header">
         <section class="profile">
-            <img src="../static/img/IMG_0074.JPG" alt="Foto do Francisco">
+            <a href="#inicio">
+                <img src="../static/img/IMG_0074.JPG" alt="Foto do Francisco">
+            </a>
             <h1>Francisco Cezar</h1>
             <div class="social-links mt-4 text-center">
                 <a target="_blank" href="https://www.linkedin.com/in/franciscocezar/">
@@ -263,6 +265,59 @@
                   </div>
 
             </div>
+        </section>
+
+        <section class="pt-5 pb-5 section-bg" id="contato">
+
+                <div class="container mb-5">
+                    <h2 class="pt-3 pb-3">Contato</h2>
+                    <div class="row">  
+
+                        <div class="col-md-5">
+                            <div class="card p-5 shadow border-0">
+                                <div class="endereco">
+                                    <h4> <i class="bi bi-geo-alt"></i> Localização:</h4>
+                                    <p>Campos do Jordão-SP</p>
+                                </div>
+        
+                                <div class="email">
+                                    <h4> <i class="bi bi-envelope"></i> E-mail:</h4>
+                                    <p>franciscocezar.jr@outlook.com</p>
+                                </div>
+        
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.735023148532!2d-45.59370998487201!3d-22.73808818509788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cc627127049341%3A0xdc9674c75770c8f4!2sAv.%20Dr.%20Janu%C3%A1rio%20Miraglia%20-%20Abern%C3%A9ssia%2C%20Campos%20do%20Jord%C3%A3o%20-%20SP%2C%2012460-000!5e0!3m2!1spt-BR!2sbr!4v1664193732855!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-100"></iframe>
+        
+                            </div>
+                        </div>
+                        <div class="col-md-7 mt-4 mt-md-0">
+                            <div class="card p-5 h-100 shadow border-0">
+        
+                                <form class="row g-3">
+                                    <div class="col-md-6">
+                                    <label for="nome" class="form-label">Nome:</label>
+                                    <input type="text" class="form-control" id="nome" placeholder="Digite seu nome" name="nome">
+                                    </div>
+                                    <div class="col-md-6">
+                                    <label for="email" class="form-label">E-mail:</label>
+                                    <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail" name="email">
+                                    </div>
+                                    
+                                    <div class="col-12">
+                                    <label for="mensagem" class="form-label">Mensagem:</label>
+                                    <textarea type="text" class="form-control" id="mensagem" rows="10" placeholder="Digite sua mensagem" name="mensagem"></textarea>
+                                    </div>
+                                    
+                                    <div class="col-12 d-flex justify-content-center mt-4">
+                                    <button type="submit" class="btn btn-primary">Enviar mensagem</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+    
+                    </div>
+
+                </div>
+
         </section>
 
     </main>
