animacao parte um

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,16 +78,16 @@
 
         <section class="container mt-5" id='sobre'>
             <div class="row w-100">
-                <div class="col-md-12">
+                <div class="col-md-12" data-anime="down">
                     <h2 class="pt-3">Sobre</h2>
                     <p>Em 2020, eu conquistei o meu Bacharelado em Relações Internacionais. Assuntos externos, como: negociações entre países, organizações multilaterais, cooperação internacional, guerra e paz sempre me fascinaram e continuam me fascinando. Tenho orgulho dessa formação. Contudo,  no meio do caminho, apaixonei-me por programação. Com Python, foi amor à primeira vista, dado a miríade de possibilidades que essa linguagem proporciona. E decidi embarcar nessa nova, desafiadora e admirável jornada. Estou convicto de que, além de ser repleta de oportunidades para adquirir conhecimento, permitirá que eu conheça novas pessoas com visões e vivências diferentes das minhas.</p>
                 </div>
             </div>
             <div class="row mt-4">
                 <div class="col-md-4">
-                    <img class="img-fluid shadow" src="../static/img/IMG_0074.JPG" alt="Foto do Francisco">
+                    <img class="img-fluid shadow" src="../static/img/IMG_0074.JPG" alt="Foto do Francisco" data-anime="left">
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8" data-anime="right">
                     <h3>Programador Python</h3>
                     <p>Estou em busca de me integrar ao mercado, por isso tenho estudado bastante por meio de cursos particulares e disponíveis na internet, livros, videoaulas e o bom e velho “vai lá e faz”, meus projetos pessoais. Além disso, tenho investido tempo em aprimorar meus conhecimentos em inglês e alemão. A primeira por ser essencial, a segunda por paixão. </p>
                     
@@ -202,7 +202,7 @@
 
         </section>
 
-        <section id="projetos" class="mt-5">
+        <section class="mt-5" id="projetos">
             <div class="container pb-5 pt-5">
                 <h2 class="pb-4">Projetos</h2>
 
