--- a/templates/index.html
+++ b/templates/index.html
@@ -129,37 +129,37 @@
                     <div class="col-md-6">
                         <p class="mt-3 mb-0">Python</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 94%;" aria-valuenow="94" aria-valuemin="0" aria-valuemax="100">94%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 94%;" aria-valuenow="94" aria-valuemin="0" aria-valuemax="100">94%</div>
                         </div>
                         <p class="mt-3 mb-0">MySQL</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 81%;" aria-valuenow="81" aria-valuemin="0" aria-valuemax="100">81%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 81%;" aria-valuenow="81" aria-valuemin="0" aria-valuemax="100">81%</div>
                         </div> 
                         <p class="mt-3 mb-0">Flask</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 67%;" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">67%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 67%;" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">67%</div>
                         </div> 
                         <p class="mt-3 mb-0">Git</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 97%;" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100">97%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 97%;" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100">97%</div>
                         </div> 
                     </div>     
                     <div class="col-md-6">
                         <p class="mt-3 mb-0">HTML</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 35%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">35%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 35%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">35%</div>
                         </div>
                         <p class="mt-3 mb-0">CSS</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 32%;" aria-valuenow="32" aria-valuemin="0" aria-valuemax="100">32%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 32%;" aria-valuenow="32" aria-valuemin="0" aria-valuemax="100">32%</div>
                         </div>
                         <p class="mt-3 mb-0">Inglês</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 69%;" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">69%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 69%;" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">69%</div>
                         </div>  
                         <p class="mt-3 mb-0">Alemão</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
                         </div>  
 
                     </div>
@@ -171,29 +171,29 @@
                     <div class="col-md-6">
                         <p class="mt-3 mb-0">Trabalho em equipe</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">95%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">95%</div>
                         </div>
                         <p class="mt-3 mb-0">Proatividade</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 97%;" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100">97%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 97%;" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100">97%</div>
                         </div> 
                         <p class="mt-3 mb-0">Orientação a detalhes</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 89%;" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100">89%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 89%;" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100">89%</div>
                         </div>  
                     </div>
                     <div class="col-md-6">
                         <p class="mt-3 mb-0">Comunicação</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 98%;" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">98%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 98%;" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">98%</div>
                         </div>
                         <p class="mt-3 mb-0">Empatia</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 92%;" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">92%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 92%;" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">92%</div>
                         </div> 
                         <p class="mt-3 mb-0">Comprometimento</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                            <div class="progress-bar" data-anime="left" role="progressbar" aria-label="Example with label" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
                         </div>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
         </section>
 
         <section class="mt-5" id="projetos">
-            <div class="container pb-5 pt-5">
+            <div class="container pb-5 pt-5" data-anime="right">
                 <h2 class="pb-4">Projetos</h2>
 
                 <div id="carouselProjetos" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -274,7 +274,7 @@
                     <div class="row">  
 
                         <div class="col-md-5">
-                            <div class="card p-5 shadow border-0">
+                            <div class="card p-5 shadow border-0" data-anime="up">
                                 <div class="endereco">
                                     <h4> <i class="bi bi-geo-alt"></i> Localização:</h4>
                                     <p>Campos do Jordão-SP</p>
@@ -290,7 +290,7 @@
                             </div>
                         </div>
                         <div class="col-md-7 mt-4 mt-md-0">
-                            <div class="card p-5 h-100 shadow border-0">
+                            <div class="card p-5 h-100 shadow border-0" data-anime="left">
         
                                 <form class="row g-3">
                                     <div class="col-md-6">
