--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <i class="bi bi-list menu-mobile"></i>
 
     <aside id="header">
-        <section class="profile">
+        <section class="profile nav-item">
             <a href="#inicio">
                 <img src="../static/img/IMG_0074.JPG" alt="Foto do Francisco">
             </a>
