--- a/templates/index.html
+++ b/templates/index.html
@@ -308,8 +308,15 @@
                                     </div>
                                     
                                     <div class="col-12 d-flex justify-content-center mt-4">
-                                    <button type="submit" class="btn btn-primary">Enviar mensagem</button>
+                                    <button id="btn-enviar" type="submit" class="btn btn-primary">Enviar mensagem</button>
+                                    
+                                    <button id="btn-enviar-loader" class="btn btn-primary" type="button" disabled>
+                                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                                        Enviando...
+                                      </button>
                                     </div>
+
+                                    
                                 </form>
                             </div>
                         </div>
