--- a/templates/index.html
+++ b/templates/index.html
@@ -294,26 +294,24 @@
         
                                 <form class="row g-3" action="/send" method="POST">
                                     <div class="col-md-6">
-                                    <label for="nome" class="form-label">Nome:</label>
-                                    <input type="text" class="form-control" id="nome" placeholder="Digite seu nome" name="nome" required>
+                                        <label for="nome" class="form-label">Nome:</label>
+                                        <input type="text" class="form-control" id="nome" placeholder="Digite seu nome" name="nome" required>
                                     </div>
                                     <div class="col-md-6">
-                                    <label for="email" class="form-label">E-mail:</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail" name="email" required>
+                                        <label for="email" class="form-label">E-mail:</label>
+                                        <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail" name="email" required>
                                     </div>
                                     
                                     <div class="col-12">
-                                    <label for="mensagem" class="form-label">Mensagem:</label>
-                                    <textarea type="text" class="form-control" id="mensagem" rows="10" placeholder="Digite sua mensagem" name="mensagem" required></textarea>
+                                        <label for="mensagem" class="form-label">Mensagem:</label>
+                                        <textarea type="text" class="form-control" id="mensagem" rows="10" placeholder="Digite sua mensagem" name="mensagem" required></textarea>
                                     </div>
                                     
                                     <div class="col-12 d-flex justify-content-center mt-4">
-                                    <button id="btn-enviar" type="submit" class="btn btn-primary">Enviar mensagem</button>
-                                    
-                                    <button id="btn-enviar-loader" class="btn btn-primary" type="button" disabled>
-                                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                                        Enviando...
-                                      </button>
+                                        <button id='btn-enviar' type="submit" class="btn btn-primary">Enviar
+                                            mensagem</button>
+    
+                                        
                                     </div>
 
                                     
