--- a/static/style.css
+++ b/static/style.css
@@ -233,3 +233,10 @@ i.menu-mobile {
   #btn-enviar-loader{
     display: none;
   }
+
+  #alerta{
+    position: fixed;
+    z-index: 10;
+    top: 30px;
+    right: 30px;
+  }
